# mes204_plus

./: CMakeLists.txt  README.md  mes204_new.ioc
Core/Inc/: graphics.h  graphics_3d.h  lcd_extreme.h  main.h  math_effect.h  particle_effect.h  video_data.h  video_player.h
Core/Src/: main.c
Core/UserDriver/: generator.py  graphics.c  graphics_3d.c  lcd_extreme.c  math_effect.c  particle_effect.c  video_player.c
IMGS/: bad-apple.h  cxk.h  demo.gif.url  demo.h  demo2.gif.url  ijZlxS.h  video_data.h
cmake/stm32cubemx/: CMakeLists.txt
